button and nav spacing fixed

--- a/css/main.css
+++ b/css/main.css
@@ -1,33 +1,6 @@
 
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  font-family: sans-serif; 
-}
-main {
-  flex: 1 0 auto; 
-  display: block;
-  margin: 0;
-  padding: 0;
-}
 /*home page styling*/
-.header{
-  display: block;
-  width: 100%;
-}
+
 
 h1{
   color: #7F56D9;
@@ -35,24 +8,16 @@ h1{
   font-weight: 250;
   font-size: 45px;
 }
-.home-container{
-  display: flex; 
-  
-}
-video{
-width: 100%;
-height: 100%;
-}
+
 
 .video-container{
-position: relative;
+ position: relative;
   width: 100%;
+  height: 100%;
 }
 
-.home-container {
-  margin: 0;
-  padding: 0;
-  position: relative;
+video{
+  width:100%
 }
 
 /*navbar styling*/
@@ -60,14 +25,12 @@ position: relative;
   display: flex;
   flex-direction: row;
   margin: 0;
-  padding: 0;
   align-items: start;
-    background-color: #7F56D9;
-    height:75px;
-    overflow: hidden;
+  background-color: #7F56D9;
+   height:80px;
+   overflow: hidden;
 }
 .topnav a {
-    float:left;
    color: #ffff;
   display: block;
   text-align: center;
@@ -75,8 +38,9 @@ position: relative;
   text-decoration: none;
   font-size: x-large;
 }
-.topnav :hover {
+.topnav:hover {
     background-color: #c4b1ee;
+    text-decoration: none;
     color: #FFFFFF;
     cursor: pointer;
   }
@@ -116,14 +80,8 @@ button {
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: #7F56D9;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
   pointer-events: auto;
 }
-ping
-  
 
 button a {
   font-size: 20px;
@@ -132,7 +90,8 @@ button a {
 }
 button:hover {
   background-color: #c4b1ee;
-  color: #FFFFFF;
+  text-decoration: none;
+  color: #7F56D9;
   cursor: pointer;
 }
 
